LM: move output folder

--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,4 @@ Altium Project/History
 Altium Project/__Previews
 Documentation/History
 Documentation/__Previews
+Altium Project/Project Logs for Smart_AC_Monitor/
